--- a/hs-panelmethod.cabal
+++ b/hs-panelmethod.cabal
@@ -12,6 +12,7 @@ author:              nilekurt
 maintainer:          nilekurt@gmail.com
 -- copyright:           
 category:            Simulation
+data-files:          vert.glsl, frag.flsl
 build-type:          Simple
 extra-source-files:  ChangeLog.md, README.md
 cabal-version:       >=1.10
@@ -20,9 +21,16 @@ executable hs-panelmethod
   main-is:             hs-panelmethod.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base, hmatrix, linear, OpenGL, GLUT, GLUtil
+  build-depends:       base >= 4.0,
+                       hmatrix,
+                       linear,
+                       vector >= 0.8,
+                       OpenGL,
+                       OpenGLRaw,
+                       GLUT,
+                       GLUtil
   -- hs-source-dirs:      
   default-language:    Haskell2010
-  ghc-options:         -Wall -O3 -threaded
+  ghc-options:         -Wall -O3 -threaded -dynamic
   if os(windows)
       build-depends:   Win32
