--- a/hs-panelmethod.cabal
+++ b/hs-panelmethod.cabal
@@ -6,6 +6,7 @@ version:             0.1.0.0
 synopsis:            Implementation of the panel method (aerodynamics) in Haskell
 -- description:         
 homepage:            https://github.com/nilekurt/hs-panelmethod
+source-repository:   https://github.com/nilekurt/hs-panelmethod.git
 license:             GPL-2
 license-file:        LICENSE
 author:              nilekurt
@@ -18,20 +19,19 @@ extra-source-files:  ChangeLog.md, README.md
 cabal-version:       >=1.10
 
 executable hs-panelmethod
-  main-is:             hs-panelmethod.hs
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >= 4.0,
-                       hmatrix,
-                       linear,
-                       parallel,
-                       vector >= 0.8,
-                       OpenGL,
-                       OpenGLRaw,
-                       GLUT,
-                       GLUtil
-  -- hs-source-dirs:      
-  default-language:    Haskell2010
-  ghc-options:         -Wall -O3 -threaded -dynamic
+  main-is:           Main.hs
+  other-modules:     VectorUtils
+  build-depends:     base >= 4.0 && < 4.9,
+                     hmatrix,
+                     linear,
+                     parallel,
+                     vector >= 0.8,
+                     OpenGL,
+                     OpenGLRaw,
+                     GLUT,
+                     GLUtil
+  --hs-source-dirs:
+  default-language:  Haskell2010
+  ghc-options:       -Wall -O3 -threaded -dynamic
   if os(windows)
-      build-depends:   Win32
+      build-depends: Win32
