--- a/hs-panelmethod.cabal
+++ b/hs-panelmethod.cabal
@@ -32,6 +32,6 @@ executable hs-panelmethod
                      GLUtil
   --hs-source-dirs:
   default-language:  Haskell2010
-  ghc-options:       -Wall -O3 -threaded -dynamic -fllvm
+  ghc-options:       -Wall -O3 -threaded -dynamic
   if os(windows)
       build-depends: Win32
