--- a/hs-panelmethod.cabal
+++ b/hs-panelmethod.cabal
@@ -6,7 +6,6 @@ version:             0.1.0.0
 synopsis:            Implementation of the panel method (aerodynamics) in Haskell
 -- description:         
 homepage:            https://github.com/nilekurt/hs-panelmethod
-source-repository:   https://github.com/nilekurt/hs-panelmethod.git
 license:             GPL-2
 license-file:        LICENSE
 author:              nilekurt
@@ -18,6 +17,10 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md, README.md
 cabal-version:       >=1.10
 
+source-repository    head
+    type:            git
+    location:        https://github.com/nilekurt/hs-panelmethod.git
+
 executable hs-panelmethod
   main-is:           Main.hs
   other-modules:     VectorUtils
@@ -26,10 +29,8 @@ executable hs-panelmethod
                      linear,
                      parallel,
                      vector >= 0.8,
-                     OpenGL,
                      OpenGLRaw,
-                     GLUT,
-                     GLUtil
+                     GLFW-b
   --hs-source-dirs:
   default-language:  Haskell2010
   ghc-options:       -Wall -O3 -threaded -dynamic
